scode/TeamDigital/prob7/error.txt
main.cpp:4:1: error: expected initializer before 'int'
    4 | int z
      | ^~~
